--- a/src/main/resources/issue.fxml
+++ b/src/main/resources/issue.fxml
@@ -2,29 +2,39 @@
 
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.5" orientation="HORIZONTAL" prefHeight="75.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" >
-    <items>
+
+<GridPane gridLinesVisible="true" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+   </rowConstraints>
+   <children>
       <StackPane>
          <children>
-            <Hyperlink text="Issue-101">
+            <Hyperlink style="-fx-border-color: transparent;" text="Issue-101" StackPane.alignment="CENTER">
                <font>
                   <Font size="24.0" />
                </font>
             </Hyperlink>
          </children>
       </StackPane>
-      <StackPane>
+      <StackPane GridPane.columnIndex="1">
          <children>
-            <Label text="0:00">
+            <Label text="0:00" StackPane.alignment="CENTER">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
          </children>
       </StackPane>
-    </items>
-  </SplitPane>
+   </children>
+</GridPane>
