--- a/src/main/resources/issue.fxml
+++ b/src/main/resources/issue.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-
-<GridPane gridLinesVisible="true" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="root" gridLinesVisible="true" onMouseClicked="#click" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mattihew.model.Issue">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -18,16 +17,16 @@
       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <StackPane>
+      <StackPane GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
          <children>
-            <Hyperlink style="-fx-border-color: transparent;" text="Issue-101" StackPane.alignment="CENTER">
+            <Hyperlink fx:id="lblIssue" style="-fx-border-color: transparent;" text="Issue-101" StackPane.alignment="CENTER">
                <font>
                   <Font size="24.0" />
                </font>
             </Hyperlink>
          </children>
       </StackPane>
-      <StackPane GridPane.columnIndex="1">
+      <StackPane GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
          <children>
             <Label text="0:00" StackPane.alignment="CENTER">
                <font>
