--- a/src/main/resources/issue.fxml
+++ b/src/main/resources/issue.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="root" gridLinesVisible="true" onMouseClicked="#click" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mattihew.model.Issue">
+<GridPane fx:id="root" gridLinesVisible="true" minHeight="25.0" minWidth="-Infinity" onMouseClicked="#click" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mattihew.model.Issue">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -19,7 +19,7 @@
    <children>
       <StackPane GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
          <children>
-            <Hyperlink fx:id="lblIssue" style="-fx-border-color: transparent;" text="Issue-101" StackPane.alignment="CENTER">
+            <Hyperlink fx:id="lblIssue" mouseTransparent="true" style="-fx-border-color: transparent;" text="Issue-101" StackPane.alignment="CENTER">
                <font>
                   <Font size="24.0" />
                </font>
@@ -28,7 +28,7 @@
       </StackPane>
       <StackPane GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
          <children>
-            <Label text="0:00" StackPane.alignment="CENTER">
+            <Label fx:id="lblTime" text="0:00" StackPane.alignment="CENTER">
                <font>
                   <Font size="24.0" />
                </font>
