--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.ToolBar?>
@@ -14,7 +15,11 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mattihew.Main">
    <center>
-       <VBox fx:id="issueContainer" prefHeight="200.0" prefWidth="100.0" />
+      <ScrollPane fitToHeight="true" fitToWidth="true">
+         <content>
+             <VBox fx:id="issueContainer" prefHeight="200.0" />
+         </content>
+      </ScrollPane>
    </center>
    <top>
       <VBox BorderPane.alignment="CENTER">
@@ -44,7 +49,7 @@
              </MenuBar>
             <ToolBar>
               <items>
-                <Button mnemonicParsing="false" text="+" />
+                <Button fx:id="BtnAdd" mnemonicParsing="false" onAction="#addNewIssue" text="+" />
               </items>
             </ToolBar>
          </children>
