--- a/src/main/resources/dialogs/createIssueDialog.fxml
+++ b/src/main/resources/dialogs/createIssueDialog.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mattihew.dialogs.CreateIssueDialog">
+<GridPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
+    fx:controller="com.mattihew.dialogs.CreateIssueDialog">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -17,11 +18,11 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
-   <children>
-      <Label text="Issue Name:" />
-      <TextField fx:id="txtIssueName" promptText="issue" GridPane.columnIndex="1" />
-      <Separator prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-      <Label text="URL (optional): " GridPane.rowIndex="2" />
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-   </children>
+    <children>
+        <Label text="Issue Name:" />
+        <TextField fx:id="txtIssueName" promptText="issue" GridPane.columnIndex="1" />
+        <Separator prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+        <Label text="URL (optional): " GridPane.rowIndex="2" />
+        <TextField fx:id="txtIssueUrl" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+    </children>
 </GridPane>
