--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?><?import javafx.scene.control.Label?><?import javafx.scene.control.Menu?><?import javafx.scene.control.MenuBar?><?import javafx.scene.control.MenuItem?><?import javafx.scene.control.ProgressBar?><?import javafx.scene.control.ScrollPane?><?import javafx.scene.control.Separator?><?import javafx.scene.control.ToolBar?><?import javafx.scene.input.KeyCodeCombination?><?import javafx.scene.layout.BorderPane?><?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.input.KeyCodeCombination?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
-    fx:controller="com.mattihew.Main">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mattihew.Main">
     <center>
         <ScrollPane fitToHeight="true" fitToWidth="true">
             <content>
@@ -18,11 +29,9 @@
                     <menus>
                         <Menu mnemonicParsing="false" text="File">
                             <items>
-                                <MenuItem fx:id="mnuAdd" mnemonicParsing="false" onAction="#addNewIssue"
-                                    text="Add Issue">
+                                <MenuItem fx:id="mnuAdd" mnemonicParsing="false" onAction="#addNewIssue" text="Add Issue">
                                     <accelerator>
-                                        <KeyCodeCombination alt="UP" code="N" control="DOWN" meta="UP" shift="UP"
-                                            shortcut="UP" />
+                                        <KeyCodeCombination alt="UP" code="N" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                                     </accelerator>
                                     <graphic>
                                         <Label text="➕" textFill="#000000" />
@@ -33,6 +42,7 @@
                                         <Label text="🗑" textFill="#000000" />
                                     </graphic>
                                 </MenuItem>
+                                <SeparatorMenuItem mnemonicParsing="false" />
                                 <MenuItem mnemonicParsing="false" text="Close" />
                             </items>
                         </Menu>
@@ -40,8 +50,7 @@
                             <items>
                                 <MenuItem mnemonicParsing="false" onAction="#stopTracking" text="Stop">
                                     <accelerator>
-                                        <KeyCodeCombination alt="UP" code="Q" control="DOWN" meta="UP" shift="UP"
-                                            shortcut="UP" />
+                                        <KeyCodeCombination alt="UP" code="Q" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                                     </accelerator>
                                     <graphic>
                                         <Label text="⏹" textFill="#000000" />
