--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -12,13 +12,20 @@
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.layout.ColumnConstraints?>
 <BorderPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mattihew.Main">
     <center>
         <ScrollPane fitToHeight="true" fitToWidth="true">
             <content>
-                <VBox fx:id="issueContainer" prefHeight="200.0" />
+                <GridPane fx:id="issueContainer" gridLinesVisible="true" prefHeight="200.0" >
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="75.0" />
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="150.0" maxWidth="150" prefWidth="150.0" />
+                    </columnConstraints>
+                </GridPane>
             </content>
         </ScrollPane>
     </center>
