--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -12,18 +13,18 @@
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.layout.ColumnConstraints?>
 <BorderPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mattihew.Main">
     <center>
         <ScrollPane fitToHeight="true" fitToWidth="true">
             <content>
-                <GridPane fx:id="issueContainer" gridLinesVisible="true" prefHeight="200.0" >
+                <GridPane fx:id="issueContainer" gridLinesVisible="true" prefHeight="200.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="ALWAYS" minWidth="75.0" />
-                        <ColumnConstraints hgrow="ALWAYS" minWidth="150.0" maxWidth="150" prefWidth="150.0" />
+                        <ColumnConstraints hgrow="ALWAYS" maxWidth="150" minWidth="150.0" prefWidth="150.0" />
                     </columnConstraints>
                 </GridPane>
             </content>
