tidyed up and made hyperlink only link when url spesified

--- a/src/main/resources/fxml/main.css
+++ b/src/main/resources/fxml/main.css
@@ -12,3 +12,7 @@ GridPane StackPane.active {
     -fx-cursor: default;
 }
 
+Hyperlink {
+    -fx-border-color: transparent;
+    -fx-padding: 0;
+}
