--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -21,7 +20,7 @@
     <center>
         <ScrollPane fitToHeight="true" fitToWidth="true">
             <content>
-                <GridPane fx:id="issueContainer" styleClass="issueContainer" gridLinesVisible="true" prefHeight="200.0">
+                <GridPane fx:id="issueContainer" gridLinesVisible="true" prefHeight="200.0" styleClass="issueContainer">
                     <columnConstraints>
                         <ColumnConstraints hgrow="ALWAYS" minWidth="75.0" />
                         <ColumnConstraints hgrow="ALWAYS" maxWidth="150" minWidth="150.0" prefWidth="150.0" />
