added Issue Class and added server dialog

--- a/src/main/resources/fxml/main.css
+++ b/src/main/resources/fxml/main.css
@@ -12,6 +12,10 @@
     -fx-cursor: default;
 }
 
+.menu-item .label {
+    -fx-text-fill: #000000;
+}
+
 Hyperlink {
     -fx-border-color: transparent;
     -fx-padding: 0;
